# MyHelloWorld

./: .bumpversion.cfg  .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: builder.yml  pr-builder.yml  python-publish.yml  release.yml
MyHelloWorld/: __init__.py  consts.py
MyHelloWorldKugan/: __init__.py  consts.py  hello.py
